--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
+    "react-icons": "^4.8.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
